# wachmann

./: Cargo.toml  README.md  package.json  pnpm-lock.yaml  rollup.config.js  tsconfig.json
.github/workflows/: ci.yml
src/: client_messages.rs  env.rs  index.ts  logging.rs  main.rs  module.rs  server_messages.rs
src-old/: index.ts  main.rs
src-old/bot/: db.rs  logging.rs  webhook.rs
src-old/bot/model/: mod.rs  server_messages.rs
src-old/db-service/: client-messages.ts  config.ts  env.ts  index.ts  server-messages.ts
src/bot/: db.rs  env.rs  logging.rs  mod.rs
src/bot/db/: client_messages.rs  error.rs  server_messages.rs
src/bot/logging/: events.rs
src/bot/logging/events/: message_create.rs  message_update.rs
src/bot/model/: client_messages.rs  config.rs  mod.rs  server_messages.rs
src/bot/modules/: ready.rs
src/db/: env.ts  index.ts
src/db-service/: client-messages.ts  config.ts  env.ts  handlers.ts  index.ts  server-messages.ts
src/modules/: logging.rs
