# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "wachmann"
version = "0.1.0"
edition = "2021"
rust-version = "1.56.1"

[dependencies.twilight-bot-utils]
git = "https://github.com/autumnblazey/twilight-bot-utils.git"
rev = "467458de5f14f805bbef7e9131fa06a7f16aff0a"

[profile.dev]
opt-level = 0 # none
debug = true
debug-assertions = true

[profile.release]
opt-level = 3 # all
debug-assertions = false
