# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "wachmann"
version = "0.1.0"
edition = "2021"
rust-version = "1.56.1"
license = "AGPL-3.0-only"

[dependencies.twilight-bot-utils]
git = "https://github.com/autumnblazey/twilight-bot-utils.git"
rev = "de51122929327a91bdef978e5f2182d669504598"

[profile.dev]
opt-level = 0 # none
debug = true
debug-assertions = true

[profile.release]
opt-level = 3 # all
debug-assertions = false
