# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "wachmann"
version = "0.1.0"
edition = "2021"
rust-version = "1.56.1"
license = "AGPL-3.0-only"

[dependencies.async-recursion]
version = "1.0.0"

[dependencies.nix]
version = "0.24.1"

[dependencies.serde]
version = "1.0.132"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.73"

[dependencies.twilight-bot-utils]
git = "https://github.com/autumnblazey/twilight-bot-utils.git"
rev = "ac792ac3d3259512cb3fea61b9e1210a1f409ad8"

[profile.dev]
opt-level = 0 # none
debug = true
debug-assertions = true
incremental = true

[profile.release]
opt-level = 3 # all
debug-assertions = false
lto = true
